syntax = "proto3";
package com.example.grpctest.proto;

option java_package = "com.example.grpctest.proto";
option java_outer_classname = "UserServiceProto";
option java_multiple_files = true;

// 用户服务定义
service UserService {
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // 根据ID获取用户
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // 获取所有用户列表（流式）
  rpc ListUsers(ListUsersRequest) returns (stream UserResponse);

  // 更新用户信息
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // 搜索用户
  rpc SearchUsers(SearchUsersRequest) returns (stream UserResponse);
}

// 用户信息
message UserInfo {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string phone = 5;
  int64 created_time = 6;
  int64 updated_time = 7;
  string status = 8;
}

// 创建用户请求
message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
  string phone = 4;
}

// 创建用户响应
message CreateUserResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
}

// 获取用户请求
message GetUserRequest {
  int64 user_id = 1;
}

// 获取用户响应
message GetUserResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
}

// 用户列表请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// 用户响应（用于流式返回）
message UserResponse {
  UserInfo user = 1;
}

// 更新用户请求
message UpdateUserRequest {
  int64 user_id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string phone = 5;
}

// 更新用户响应
message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
}

// 删除用户请求
message DeleteUserRequest {
  int64 user_id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// 搜索用户请求
message SearchUsersRequest {
  string keyword = 1;
  int32 limit = 2;
}